# Koofr-GUI

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.en.md  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  (+1 more)
docs/: ARCHITECTURE.md  BUILDING.md  RELEASING.md
scripts/: clean.mjs
src/: App.tsx  README.md  main.tsx  styles.css  theme.ts
src-tauri/: Cargo.toml  README.md  tauri.conf.json  tauri.release.conf.json
src-tauri/capabilities/: default.json
src-tauri/scripts/: sign-windows.ps1
src-tauri/src/: commands.rs  credential_manager.rs  download_history.rs  error.rs  folder_commands.rs  folder_download.rs  lib.rs  link_commands.rs  local_access.rs  local_open.rs  logging.rs  main.rs  metadata_cache.rs  settings.rs  split_commands.rs  transfer_commands.rs  vault_commands.rs  work_directory.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/file_ops/: mod.rs
src-tauri/src/folder_download/: test_support.rs
src-tauri/src/koofr_api/: mod.rs  models.rs  public_links.rs  vault.rs
src-tauri/src/koofr_api/public_links/: tests.rs
src-tauri/src/transfer/: checkpoint.rs  checkpoint_snapshot.rs  checkpoint_tests.rs  download.rs  manager.rs  mod.rs  model.rs  part.rs  range.rs  split_package.rs  split_package_tests.rs  split_part_io.rs  split_support.rs  split_upload.rs  upload.rs  vault.rs
src-tauri/src/vault_core/: mod.rs  native_prompt.rs
(+43 files in other folders)
